# microVector

./: .gitignore  CHANGELOG.md  README.md  microvector.py  pyproject.toml
.github/workflows/: ci.yml
microvector/: __init__.py  core.py  exceptions.py  models.py  quantization.py  similarity.py
tests/: conftest.py  test_core.py  test_persistence.py  test_quantization.py  test_similarity.py
